feat(docker): Add Node.js and Port 3000 support for Documentation
- Install Node.js 20.x in release image to support running Docusaurus.
- Expose port 3000 in docker-compose.yml.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       # Avoid overwriting container's python environment with local venv
       - /app/.venv
     ipc: host # Recommended for Playwright
+    ports:
+      - "3000:3000" # Expose Docusaurus
     environment:
       - BASE_URL=https://www.google.com
       - HEADLESS=true
