feat(bdd): Implement BDD Project Support (Gherkin)
- Added 'pytest-bdd' dependency.
- Updated 'qa-init' to include Project Style selection (Standard vs BDD).
- Added BDD Scaffold templates (features/, step_defs/).
- Refactored CLI prompts for better UX.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,9 @@ dependencies = [
     "axe-playwright-python",
     "Pillow",
     "python-owasp-zap-v2.4",
-    "beautifulsoup4"
+    "python-owasp-zap-v2.4",
+    "beautifulsoup4",
+    "pytest-bdd"
 ]
 
 [project.scripts]
