feat(robot): Implement Robot Framework Support & Final CLI Upgrade
- Added 'robotframework' dependency.
- Updated 'qa-init' to include Robot Framework template.
- Can now generate 3 project types: Standard, BDD, Robot.
- Completed Phase 3 objectives.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
     "python-owasp-zap-v2.4",
     "python-owasp-zap-v2.4",
     "beautifulsoup4",
-    "pytest-bdd"
+    "pytest-bdd",
+    "robotframework"
 ]
 
 [project.scripts]
